# prd-decomposer

./: .coverage  .dockerignore  .editorconfig  .gitignore  AI_USAGE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: bootstrap.md  walk-through.md
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  formatters.py  session_state.py
docs/diagrams/: architecture.excalidraw
docs/plans/: 2025-02-14-config-di-fewshot-design.md  2025-02-14-config-di-fewshot-impl.md  2025-02-14-pre-submission-polish-plan.md  2025-02-14-production-hardening-plan.md  2026-02-14-prd-decomposer-design.md  2026-02-14-prd-decomposer-implementation.md  2026-02-15-agent-executable-tickets-design.md  2026-02-15-agent-executable-tickets-impl.md  2026-02-15-code-review-improvements-plan.md
evals/: __init__.py  eval_output_quality.py  eval_prd_tools.py
outputs/: sample_prd_01_rate_limiting_requirements.json  sample_prd_01_rate_limiting_tickets.json  sample_prd_02_user_onboarding_requirements.json  sample_prd_02_user_onboarding_tickets.json  sample_prd_03_checkout_requirements.json  sample_prd_03_checkout_tickets.json  sample_prd_04_notifications_requirements.json  sample_prd_04_notifications_tickets.json  sample_prd_05_analytics_requirements.json  sample_prd_05_analytics_tickets.json  sample_prd_06_file_upload_requirements.json  sample_prd_06_file_upload_tickets.json  sample_prd_07_search_requirements.json  sample_prd_07_search_tickets.json  sample_prd_08_payments_requirements.json  sample_prd_08_payments_tickets.json  sample_prd_09_webhooks_requirements.json  sample_prd_09_webhooks_tickets.json  sample_prd_10_mobile_push_requirements.json  sample_prd_10_mobile_push_tickets.json  summary.json
samples/: sample_prd_01_rate_limiting.md  sample_prd_02_user_onboarding.md  sample_prd_03_checkout.md  sample_prd_04_notifications.md  sample_prd_05_analytics.md  sample_prd_06_file_upload.md  sample_prd_07_search.md  sample_prd_08_payments.md  sample_prd_09_webhooks.md  sample_prd_10_mobile_push.md
scripts/: run_all_prds.py
src/prd_decomposer/: __init__.py  circuit_breaker.py  config.py  export.py  formatters.py  log.py  logging.py  models.py  prompts.py  server.py
tests/: conftest.py  test_agent.py  test_circuit_breaker.py  test_config.py  test_export.py  test_init.py  test_logging.py  test_models.py  test_prompts.py  test_server.py  test_tools.py
tests/integration/: __init__.py  (+1 more)
